dist_htmlimg_DATA = add_server.gif \
		    arrow_down.gif \
		    arrow_right.gif \
		    arrow_up.gif \
		    black.gif \
		    blue1.gif \
		    blue2.gif \
		    blue3.gif \
		    blue4.gif \
		    blue5.gif \
		    blue6.gif \
		    blue.gif \
		    cp_download.gif \
		    cp_kad.gif \
		    cp_search.gif \
		    cp_servers.gif \
		    cp_settings.gif \
		    cp_shared.gif \
		    cp_stats.gif \
		    emule.gif \
		    GraphCon.gif \
		    GraphDL.gif \
		    GraphUL.gif \
		    green.gif \
		    greenpercent.gif \
		    l_cancel.gif \
		    l_connect.gif \
		    l_down.gif \
		    l_ed2klink.gif \
		    l_info.gif \
		    log.gif \
		    l_pause.gif \
		    l_resume.gif \
		    l_up.gif \
		    main_bg.gif \
		    main_top_bg.gif \
		    red.gif \
		    top_bar_bg2.gif \
		    top_bar_bg.gif \
		    transparent.gif \
		    yellow.gif

htmlimgdir = $(datadir)/amuleweb/webserver
